Node Editor System

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -172,3 +172,9 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/NodeEditorTomas.NodeEditorTomas
+GameDefaultMap=/Game/NodeEditorTomas.NodeEditorTomas
+TransitionMap=/Game/NodeEditorTomas.NodeEditorTomas
+ServerDefaultMap=/Game/NodeEditorTomas.NodeEditorTomas
+
