--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,8 +173,8 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/NodeEditorTomas.NodeEditorTomas
-GameDefaultMap=/Game/NodeEditorTomas.NodeEditorTomas
-TransitionMap=/Game/NodeEditorTomas.NodeEditorTomas
-ServerDefaultMap=/Game/NodeEditorTomas.NodeEditorTomas
+EditorStartupMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
+GameDefaultMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
+TransitionMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
+ServerDefaultMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
 
