--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -178,3 +178,15 @@ GameDefaultMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
 TransitionMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
 ServerDefaultMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=()
+SoftwareCursors=((GrabHand, "/Game/Mona/CustomCursor_CreateNode.CustomCursor_CreateNode_C"))
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve=None)
+bAllowHighDPIInGameMode=False
+DesignScreenSize=(X=1920,Y=1080)
+bLoadWidgetsOnDedicatedServer=True
+
