Level Time bug fixed/Basic balancing
Prepared for packaging
Build v03

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -173,15 +173,15 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
-GameDefaultMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
+EditorStartupMap=/Game/Levels/Level1.Level1
+GameDefaultMap=/Game/LevelSelect_UI/MainMenu.MainMenu
 TransitionMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
 ServerDefaultMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((GrabHand, "/Game/Mona/CustomCursor_CreateNode.CustomCursor_CreateNode_C"))
+SoftwareCursors=((GrabHand, "/Game/NodeEditor/Widgets/CustomCursor_CreateNode.CustomCursor_CreateNode_C"))
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
