--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -181,7 +181,7 @@ ServerDefaultMap=/Game/Mona/Mona_NodeEditor.Mona_NodeEditor
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((GrabHand, "/Game/NodeEditor/Widgets/CustomCursor_CreateNode.CustomCursor_CreateNode_C"))
+SoftwareCursors=((GrabHand, "/Game/Slate/CustomCursor_CreateNode.CustomCursor_CreateNode_C"),(Default, "/Game/Slate/CustomCursor_Default.CustomCursor_Default_C"))
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
